<resources>
    <string name="app_name">Movimento1Euro</string>
    <string name="versionCode">0.5.1</string>
    <string name="versionName">0.5.1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="content_description_logo">Logo</string>
    <string name="btn_sign_in">Iniciar sessão</string>
    <string name="btn_sign_up">Registar</string>
    <string name="activity_cause">Causa</string>
    <string name="action_about">Sobre</string>

    <string name="nav_logout">Terminar Sessão</string>
    <string name="nav_logout_unauth">Iniciar Sessão</string>
    <string name="nav_contacts">Contactos</string>
    <string name="nav_news">Noticias</string>
    <string name="nav_about_us">Sobre nós</string>
    <string name="nav_prev_winners">Vencedores Passados</string>
    <string name="nav_causes">Causas</string>



    <!--LOGIN-->
        <!--ERROR MESSAGES-->
    <string name="failed_connection">Ligação Falhou</string>
    <string name="failed_login">Falha a iniciar sessão</string>
    <string name="wrong_parameters">Pârametros Errados</string>
        <!--LAYOUT-->
    <string name="unauthenticated_user_button">Entrar como visitante</string>

    <!--FACEBOOK API-->
    <string name="facebook_app_id">208375452933152</string>
    <string name="fb_login_protocol_scheme">fb208375452933152</string>

    <!--API-->
    <string name="api_server_url">http://staging.diogomoura.me/api</string>
    <string name="std_login_path">/login</string>
    <string name="logout_path">/logout</string>
    <string name="fb_login_path">/loginFB</string>
    <!--TODO REVER PATH UNAUTH LOGIN-->
    <string name="unauth_login_path">/unauth_login</string>
    <string name="winner_causes_path">/winnerCauses</string>
    <string name="voting_causes_path">/votingCauses</string>
    <string name="upd_firebase_token_path">/firebaseToken</string>
    <string name="vote_in_cause_path">/voteCause</string>
    <string name="days_to_warn_path">/daysToWarn</string>
    <string name="update_user_info">/refresh</string>
    <string name="seen_notification_path">/notificationSeen</string>

    <!--API responses-->
    <string name="api_success_response">success</string>
    <string name="vote_cause_success">Voto registado com sucesso!</string>


    <!--User errors-->
    <string name="user_connection_error">Não foi possível carregar a lista de causas. Verifique a sua conexão.</string>
    <string name="causes_request_error">Ocorreu um erro ao carregar as causas. Tente de novo. Se o problema persistir, por favor reporte o problema ao Movimento1Euro.</string>
    <string name="days_to_warn_request_error">Ocorreu um erro ao efetuar a conexão. Tente de novo. Se o problema persistir, por favor reporte o problema ao Movimento1Euro.</string>
    <string name="user_loading_authetication_error">Não foi possível carregar a lista de causas. Verifique se está autenticado</string>
    <string name="unauthenticated_voting_error">Não pode votar se não estiver autenticado. Por favor inicie sessão</string>
    <string name="user_vote_error">Erro ao registar voto. Verifique se já votou este mês.</string>
    <string name="unkown_vote_error">Erro a ligar com o servidor. Por favor tente mais tarde</string>

    <!--WEBSITE URLS-->
    <string name="website_url">http://movimento1euro.com</string>
    <string name="about_us_path">/sobre-nos/a-associacao</string>
    <string name="news_path">/sobre-nos/noticias</string>
    <string name="contacts_path">/contactos</string>

    <!-- voting button -->
    <string name="voting_button">Votar</string>

    <!-- voting dialog -->
    <string name="pop_up_voting_message">Confirmação</string>
    <string name="pop_up_voting_positive">Votar</string>
    <string name="pop_up_voting_negative">Cancelar</string>

    <!-- constantes -->
    <string name="seeMoreInfo"><u> Ver Mais </u><br/></string>
    <string name="seeLessInfo"><u> Ver Menos </u><br/></string>
    <string name="imageLinkDefault">http://www.venuscomputers.pk/wp-content/uploads/2014/12/image-not-available.jpg</string>

    <!--YOUTUBE-->
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
</resources>
