<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_login_screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/background_light"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:weightSum="1">

        <ImageView android:src="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo"
            android:scaleType="fitCenter"
            android:layout_height="100dp"
            android:contentDescription="@string/content_description_logo" />



        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <!-- Dummy item to prevent AutoCompleteTextView from receiving focus -->
            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px"/>
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:nextFocusUp="@id/input_email"
                android:nextFocusLeft="@id/input_email"/>
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/btn_sign_in"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="?attr/colorPrimary"
                android:textSize="19sp"
                android:textColor="@color/colorSecundary" />

            <Space
                android:layout_width="74dp"
                android:layout_height="wrap_content" />

            <Button
                android:text="@string/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_sign_up"
                android:layout_weight="1"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorPrimary"
                android:padding="12dp"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

    </LinearLayout>
</ScrollView>